--- a/notebooks/albert-evals-RAG.ipynb
+++ b/notebooks/albert-evals-RAG.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a08ad991-1bb7-4b54-b719-11a14a8d9108",
+   "metadata": {},
+   "source": [
+    "# Abert RAG Model Evals \n",
+    "\n",
+    "Model with RAG on service-public and travail-emploie sheets."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "587a2251-9dc2-4a66-b48f-3eb49cf6b5bf",
    "metadata": {},
    "outputs": [],
@@ -35,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "ecb4a91a-09aa-49dc-8d1c-682ca14b111f",
    "metadata": {},
    "outputs": [
@@ -43,60 +53,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created expset: albert-api-rag-mfs-v4 (19)\n"
+      "Created expset: Albert - RAG - (MFS_questions_v01) v4-10-25 (75)\n",
+      "Created expset: Albert - RAG - (Assistant IA - QA) v4-10-25 (76)\n"
      ]
     }
    ],
    "source": [
-    "# Designing my experiments\n",
+    "# Design and tun the experiments\n",
     "# --\n",
-    "expset_name = \"albert-api-rag-mfs-v4\"\n",
-    "expset_readme = \"Evaluating hybrid search on MFS dataset.\"\n",
-    "metrics = [\"judge_precision\", \"contextual_relevancy\", \"output_length\", \"generation_time\"]\n",
-    "common_params = {\n",
-    "    \"dataset\" : \"MFS_questions_v01\",\n",
-    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
-    "    \"metrics\" : metrics,\n",
-    "    \"judge_model\": \"gpt-4.1\",\n",
-    "}\n",
-    "grid_params = {\n",
-    "    \"model\": [\n",
-    "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
-    "            \"aliased_name\": \"albert-large-semantic-elastic\",\n",
-    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"collections\": [784,785], \"k\":10}},\n",
-    "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
-    "        },\n",
-    "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
-    "            \"aliased_name\": \"albert-large-lexical-elastic\",\n",
-    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"lexical\", \"collections\": [784,785], \"k\":10}},\n",
-    "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
-    "        },\n",
-    "        {\n",
-    "            \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
-    "            \"aliased_name\": \"albert-large-hybrid-elastic\",\n",
-    "            \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"collections\": [784,785], \"k\":10}},\n",
-    "            \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
-    "        },\n",
-    "    ],\n",
-    "}\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Lauching the experiment set\n",
-    "expset = {\n",
-    "    \"name\" : expset_name, \n",
-    "    \"readme\": expset_readme,\n",
-    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":1}\n",
-    "}\n",
-    "response = requests.post(f'{EG1_API_URL}/experiment_set', json=expset, headers=headers)\n",
-    "resp = response.json()\n",
-    "if \"id\" in resp:\n",
-    "    expset_id = resp[\"id\"]\n",
-    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
-    "else:\n",
-    "    print(resp)"
+    "for dataset in [\"MFS_questions_v01\",  \"Assistant IA - QA\"]:\n",
+    "    expset_name = f\"Albert - RAG - ({dataset}) v4-10-25\"\n",
+    "    expset_readme = f\"Comparing Albert RAG Models on dataset {dataset}\"\n",
+    "    metrics = [\"judge_precision\", \"contextual_relevancy\", \"output_length\", \"generation_time\"]\n",
+    "    common_params = {\n",
+    "        \"dataset\" : \"MFS_questions_v01\",\n",
+    "        \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
+    "        \"metrics\" : metrics,\n",
+    "        \"judge_model\": \"gpt-4.1\",\n",
+    "    }\n",
+    "    grid_params = {\n",
+    "        \"model\": [\n",
+    "            {\n",
+    "                \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "                \"aliased_name\": \"albert-large-semantic-elastic-k5\",\n",
+    "                \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"collections\": [784,785], \"k\":5}},\n",
+    "                \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
+    "            },\n",
+    "            {\n",
+    "                \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "                \"aliased_name\": \"albert-large-hybrid-elastic-k5\",\n",
+    "                \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"collections\": [784,785], \"k\":5}},\n",
+    "                \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
+    "            },\n",
+    "            {\n",
+    "                \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "                \"aliased_name\": \"albert-large-semantic-elastic-k10\",\n",
+    "                \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"semantic\", \"collections\": [784,785], \"k\":10}},\n",
+    "                \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
+    "            },\n",
+    "            {\n",
+    "                \"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \n",
+    "                \"aliased_name\": \"albert-large-hybrid-elastic-k10\",\n",
+    "                \"extra_params\": {\"search\": True, \"search_args\": {\"method\": \"hybrid\", \"collections\": [784,785], \"k\":10}},\n",
+    "                \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY\n",
+    "            },\n",
+    "            # Raw\n",
+    "            {\"name\": \"mistralai/Mistral-Small-3.2-24B-Instruct-2506\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "        ],\n",
+    "    }\n",
+    "    \n",
+    "    # Lauching the experiment set\n",
+    "    expset = {\n",
+    "        \"name\" : expset_name, \n",
+    "        \"readme\": expset_readme,\n",
+    "        \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":2}\n",
+    "    }\n",
+    "    response = requests.post(f'{EG1_API_URL}/experiment_set', json=expset, headers=headers)\n",
+    "    resp = response.json()\n",
+    "    if \"id\" in resp:\n",
+    "        expset_id = resp[\"id\"]\n",
+    "        print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
+    "    else:\n",
+    "        print(resp)"
    ]
   },
   {
