--- a/notebooks/RAG_evaluation.ipynb
+++ b/notebooks/RAG_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 117,
    "id": "f33fde59-7aff-4f16-898d-95497d084548",
    "metadata": {},
    "outputs": [],
@@ -22,8 +22,8 @@
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "\n",
-    "EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
-    "#EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
+    "#EVALAP_API_URL = \"http://localhost:8000/v1\"\n",
+    "EVALAP_API_URL = \"https://evalap.etalab.gouv.fr/v1\"\n",
     "EVALAP_API_KEY = os.getenv(\"EVALAP_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 128,
    "id": "474ad967-2543-4f4d-91d0-24abe091d9fd",
    "metadata": {},
    "outputs": [],
@@ -220,14 +220,14 @@
     "# Build 1000 random index to work with a subset of the dataset in order to do faster and cheaper evaluation\n",
     "# --\n",
     "N = len(dataset_df) # Size of the \n",
-    "rng = np.random.default_rng(43)\n",
-    "sample = rng.choice(np.arange(N+1), size=5, replace=False)\n",
+    "rng = np.random.default_rng(42)\n",
+    "sample = rng.choice(np.arange(N), size=1000, replace=False)\n",
     "sample = sample.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 129,
    "id": "0867c195-260b-4d93-9abc-2337c9ba7c45",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created expset: LegalBenchRAG Evaluation v1 (47)\n"
+      "Created expset: LegalBenchRAG Evaluation (111)\n"
      ]
     }
    ],
@@ -243,10 +243,10 @@
     "# Initial NORAG experiments\n",
     "# --\n",
     "\n",
-    "expset_name = \"LegalBenchRAG Evaluation v1\"\n",
+    "expset_name = \"LegalBenchRAG Evaluation\"\n",
     "expset_readme = \"A extensive RAG evaluation on the LegalBecnhRAG dataset. See [complete me]\"\n",
     "\n",
-    "system_prompt = \"Réponds de manière simple et direct à la question sans aucune explication. Ne cite pas les sources/contexte si donnée.\"\n",
+    "system_prompt = \"Provide a clear and sound answer to the question. Use the source of information, if given, to answer.\"\n",
     "sampling_params = {\"temperature\": 0.2}\n",
     "\n",
     "common_params = {\n",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 130,
    "id": "7c5d819c-d820-4584-ad9d-c9ec04a2d443",
    "metadata": {},
    "outputs": [],
@@ -298,7 +298,7 @@
     "from evalap.rag.search import SearchEngineClient\n",
     "\n",
     "\n",
-    "rag_prompt = Template(\"\"\"Utilise les sources d'informations suivantes comme source de vérité si elle adresse la question :\n",
+    "rag_prompt = Template(\"\"\"Use the following sources of information as a source of truth if they address the question:\n",
     "\n",
     "<SOURCE>\n",
     "{% for chunk in chunks %}\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 131,
    "id": "31b924c1-0f80-4f89-a266-07bafe389364",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Utilise les sources d'informations suivantes comme source de vérité si elle adresse la question :\n",
+      "Use the following sources of information as a source of truth if they address the question:\n",
       "\n",
       "<SOURCE>\n",
       "\n",
@@ -391,7 +391,17 @@
    "execution_count": null,
    "id": "c44dfa6c-61c3-4bda-bd42-a17e9611b3ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LLM API error: Internal Server Error\n",
+      "\n",
+      "Error: 500 Server Error: Internal Server Error for url: https://albert.api.etalab.gouv.fr/v1/embeddings, retrying in 5 seconds...\n"
+     ]
+    }
+   ],
    "source": [
     "# Async computing -- RAG generation\n",
     "# --\n",
@@ -453,27 +463,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 116,
    "id": "d3744c5f-cae7-427a-a765-a630e6b0f266",
    "metadata": {},
    "outputs": [
     {
-     "ename": "JSONDecodeError",
-     "evalue": "Expecting value: line 1 column 1 (char 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mJSONDecodeError\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/main/missions/venv/lib/python3.13/site-packages/requests/models.py:976\u001b[39m, in \u001b[36mResponse.json\u001b[39m\u001b[34m(self, **kwargs)\u001b[39m\n\u001b[32m    975\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m976\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcomplexjson\u001b[49m\u001b[43m.\u001b[49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    977\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m JSONDecodeError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    978\u001b[39m     \u001b[38;5;66;03m# Catch JSON-related errors and raise as requests.JSONDecodeError\u001b[39;00m\n\u001b[32m    979\u001b[39m     \u001b[38;5;66;03m# This aliases json.JSONDecodeError and simplejson.JSONDecodeError\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3.13/json/__init__.py:346\u001b[39m, in \u001b[36mloads\u001b[39m\u001b[34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[39m\n\u001b[32m    343\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[32m    344\u001b[39m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[32m    345\u001b[39m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[32m--> \u001b[39m\u001b[32m346\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_default_decoder\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    347\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3.13/json/decoder.py:345\u001b[39m, in \u001b[36mJSONDecoder.decode\u001b[39m\u001b[34m(self, s, _w)\u001b[39m\n\u001b[32m    341\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[32m    342\u001b[39m \u001b[33;03mcontaining a JSON document).\u001b[39;00m\n\u001b[32m    343\u001b[39m \n\u001b[32m    344\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m345\u001b[39m obj, end = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mraw_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[43m=\u001b[49m\u001b[43m_w\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    346\u001b[39m end = _w(s, end).end()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/lib/python3.13/json/decoder.py:363\u001b[39m, in \u001b[36mJSONDecoder.raw_decode\u001b[39m\u001b[34m(self, s, idx)\u001b[39m\n\u001b[32m    362\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[32m--> \u001b[39m\u001b[32m363\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[33m\"\u001b[39m\u001b[33mExpecting value\u001b[39m\u001b[33m\"\u001b[39m, s, err.value) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    364\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m obj, end\n",
-      "\u001b[31mJSONDecodeError\u001b[39m: Expecting value: line 1 column 1 (char 0)",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[31mJSONDecodeError\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[70]\u001b[39m\u001b[32m, line 35\u001b[39m\n\u001b[32m     26\u001b[39m expset = {\n\u001b[32m     27\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mcv\u001b[39m\u001b[33m\"\u001b[39m: {\u001b[33m\"\u001b[39m\u001b[33mcommon_params\u001b[39m\u001b[33m\"\u001b[39m: common_params, \u001b[33m\"\u001b[39m\u001b[33mgrid_params\u001b[39m\u001b[33m\"\u001b[39m: grid_params, \u001b[33m\"\u001b[39m\u001b[33mrepeat\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m2\u001b[39m},\n\u001b[32m     28\u001b[39m }\n\u001b[32m     30\u001b[39m response = requests.patch(\n\u001b[32m     31\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mEVALAP_API_URL\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/experiment_set/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexpset_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m,\n\u001b[32m     32\u001b[39m     headers={\u001b[33m\"\u001b[39m\u001b[33mAuthorization\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mBearer \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mEVALAP_API_KEY\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mContent-Encoding\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mgzip\u001b[39m\u001b[33m\"\u001b[39m},\n\u001b[32m     33\u001b[39m     json=expset,\n\u001b[32m     34\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m35\u001b[39m resp = \u001b[43mresponse\u001b[49m\u001b[43m.\u001b[49m\u001b[43mjson\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     36\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mid\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m resp:\n\u001b[32m     37\u001b[39m     expset_id = resp[\u001b[33m\"\u001b[39m\u001b[33mid\u001b[39m\u001b[33m\"\u001b[39m]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/main/missions/venv/lib/python3.13/site-packages/requests/models.py:980\u001b[39m, in \u001b[36mResponse.json\u001b[39m\u001b[34m(self, **kwargs)\u001b[39m\n\u001b[32m    976\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m complexjson.loads(\u001b[38;5;28mself\u001b[39m.text, **kwargs)\n\u001b[32m    977\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m JSONDecodeError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    978\u001b[39m     \u001b[38;5;66;03m# Catch JSON-related errors and raise as requests.JSONDecodeError\u001b[39;00m\n\u001b[32m    979\u001b[39m     \u001b[38;5;66;03m# This aliases json.JSONDecodeError and simplejson.JSONDecodeError\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m980\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m RequestsJSONDecodeError(e.msg, e.doc, e.pos)\n",
-      "\u001b[31mJSONDecodeError\u001b[39m: Expecting value: line 1 column 1 (char 0)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Patch expset: LegalBenchRAG Evaluation v3 (50)\n"
      ]
     }
    ],
@@ -504,7 +502,7 @@
     "}\n",
     "\n",
     "expset = {\n",
-    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\": 2},\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\": 1},\n",
     "}\n",
     "\n",
     "response = requests.patch(\n",
@@ -515,10 +513,18 @@
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
-    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
+    "    print(f'Patch expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
     "else:\n",
     "    print(resp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac7768cf-97f5-4242-9319-863af47dd7d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
