--- a/notebooks/RAG_evaluation.ipynb
+++ b/notebooks/RAG_evaluation.ipynb
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "c44dfa6c-61c3-4bda-bd42-a17e9611b3ca",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,27 @@
      "text": [
       "LLM API error: Internal Server Error\n",
       "\n",
-      "Error: 500 Server Error: Internal Server Error for url: https://albert.api.etalab.gouv.fr/v1/embeddings, retrying in 5 seconds...\n"
+      "Error: 500 Server Error: Internal Server Error for url: https://albert.api.etalab.gouv.fr/v1/embeddings, retrying in 5 seconds...\n",
+      "LLM Generation Error: <html>\n",
+      "<head><title>504 Gateway Time-out</title></head>\n",
+      "<body>\n",
+      "<center><h1>504 Gateway Time-out</h1></center>\n",
+      "<hr><center>nginx/1.27.4</center>\n",
+      "</body>\n",
+      "</html>\n",
+      "\n",
+      "\n",
+      "Error: 504 Server Error: Gateway Time-out for url: https://albert.api.etalab.gouv.fr/v1/chat/completions, retrying in 5 seconds...\n",
+      "LLM Generation Error: <html>\n",
+      "<head><title>504 Gateway Time-out</title></head>\n",
+      "<body>\n",
+      "<center><h1>504 Gateway Time-out</h1></center>\n",
+      "<hr><center>nginx/1.27.4</center>\n",
+      "</body>\n",
+      "</html>\n",
+      "\n",
+      "\n",
+      "Error: 504 Server Error: Gateway Time-out for url: https://albert.api.etalab.gouv.fr/v1/chat/completions, retrying in 5 seconds...\n"
      ]
     }
    ],
@@ -459,6 +479,27 @@
     "        results = list(executor.map(generate_with_rag_partial, prompts))\n",
     "\n",
     "    model_answers.append(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "6c0af8e8-cc10-47da-9aaf-8a102156b432",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n",
+      "1000\n",
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for answers in model_answers:\n",
+    "    print(len([x for x in answers if x.strip()]))"
    ]
   },
   {
